postgresql-common (118) UNRELEASED; urgency=low

  * Update Catalan debconf translations, thanks Innocent De Marchi.  
    (Closes: #628370)

 -- Martin Pitt <mpitt@debian.org>  Thu, 02 Jun 2011 09:34:56 +0200

postgresql-common (117) unstable; urgency=low

  * Update Dutch debconf translations, thanks Vincent Zweije.
    (Closes: #627520)
  * Add Catalan debconf translations, thanks Innocent De Marchi.
    (Closes: #628370)
  * debian/control, debian/rules: Let -server-dev-all depend on all supported
    -server-dev-X.Y packages. (Closes: #624749)
  * Add pg_config wrapper: If postgresql-server-dev-* is installed, this calls
    pg_config from the latest available one. Otherwise this falls back to
    libpq-dev's version. This should fix a common confusion for people who
    want to build e. g. 9.0 server-side extensions with a newer (like 9.1
    beta) libpq-dev installed. In debian/postgresql-common.{preinst,postrm}:
    Divert libpq-dev's /usr/bin/pg_config to pg_config.libpq-dev.

 -- Martin Pitt <mpitt@debian.org>  Sun, 29 May 2011 19:22:27 +0200

postgresql-common (116) unstable; urgency=low

  * debian/supported-versions: Move Debian testing/unstable and Ubuntu 11.10
    to 9.0.
  * pg_upgradecluster: Revert to the previous encode()/decode() wrapping in
    the "probin" fixup for cluster upgrades from versions < 9.0. Earlier
    versions' replace() function indeed does work on bytea types, not strings,
    so this broke upgrades to 8.4. (Closes: #627227)
  * pg_upgradecluster: Drop all unversioned configuration option transitions,
    which were still from the 7.4 → 8.0 days. These are obsolete, and
    versions >= 96 only support clusters >= 8.1 anyway. In some cases they
    actively break stuff, like inadvertently setting log_statement=all.
    (Closes: #617493)
  * t/060_obsolete_confparams.t: Fix remaining "{,log_}timezone=unknown"
    example configuration files, to also fix upgrade tests for 8.4 → 9.1.
